Archive2/59/d6895f9975cdb4/output
main.cpp: In function 'void Test::test2()':
main.cpp:21:27: error: cannot convert 'X::Y' to 'int' for argument '1' to 'void Test::foo(int)'
     void test2() { foo(Y{}); }
                           ^
